--- a/Application/Admin/View/Sporttery/jiaoqiu.html
+++ b/Application/Admin/View/Sporttery/jiaoqiu.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>欧赔赔率(标准盘)-后台系统</title>
-    <meta name="keywords" content="欧赔赔率">
-    <meta name="description" content="欧赔赔率">
+    <title>角球赔率-后台系统</title>
+    <meta name="keywords" content="角球赔率">
+    <meta name="description" content="角球赔率">
     <link rel="shortcut icon" href="favicon.ico">
     <link href="__PUBLIC__/admin/css/bootstrap.min.css?v=3.3.5" rel="stylesheet">
     <link href="__PUBLIC__/admin/css/font-awesome.css?v=4.4.0" rel="stylesheet">
@@ -21,7 +21,7 @@
         <div class="col-sm-12">
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
-                    <h5>欧赔赔率(标准盘)</h5>
+                    <h5>角球赔率</h5>
                     <!--
                     <div class="ibox-tools"> <a class="collapse-link"> <i class="fa fa-chevron-up"></i> </a> <a class="dropdown-toggle" data-toggle="dropdown" href="table_data_tables.html#"> <i class="fa fa-wrench"></i> </a>
                       <ul class="dropdown-menu dropdown-user">
@@ -38,26 +38,24 @@
                                 <tr>
                                     <th>赛事ID</th>
                                     <th>博彩公司</th>
-                                    <th>初盘主胜赔率</th>
-                                    <th>初盘和局赔率</th>
-                                    <th>初盘客胜赔率</th>
-                                    <th>即时主胜赔率</th>
-                                    <th>即时和局赔率</th>
-                                    <th>即时客胜赔率</th>
+                                    <th>类型</th>
+                                    <th>主胜赔率</th>
+                                    <th>客胜赔率</th>
+                                    <th>让球数</th>
+                                    <th>赔率时间</th>
                                     <th>操作</th>
                                 </tr>
                                 </thead>
                                 <tbody>
                                 <volist name="list" id="item">
                                     <tr class="gradeX">
-                                        <td>{$item.match_id}</td>
+                                        <td>{$item.schedule_id}</td>
                                         <td>{:getCompanyName($item[company_id])}</td>
-                                        <td>{$item.begin_home_rate}</td>
-                                        <td>{$item.begin_draw_rate}</td>
-                                        <td>{$item.begin_away_rate}</td>
-                                        <td>{$item.change_home_rate}</td>
-                                        <td>{$item.change_draw_rate}</td>
-                                        <td>{$item.change_away_rate}</td>
+                                        <td>{$item.type}</td>
+                                        <td>{$item.home_rate}</td>
+                                        <td>{$item.away_rate}</td>
+                                        <td>{$item.goal}</td>
+                                        <td>{$item.modify_time}</td>
                                         <td class="center">
                                         </td>
                                     </tr>
