--- a/Application/Admin/View/Index/index.html
+++ b/Application/Admin/View/Index/index.html
@@ -46,7 +46,13 @@
         <li> <a href="#"> <i class="fa fa-home"></i> <span class="nav-label">赛事管理</span> <span class="fa arrow"></span> </a>
           <ul class="nav nav-second-level">
             <li> <a class="J_menuItem" href="{:U('match/index')}">赛事列表</a> </li>
-            <li> <a class="J_menuItem" href="{:U('match/forecast')}">赛事预测</a> </li>
+            <li> <a class="J_menuItem" href="{:U('match/follow')}">关注列表</a> </li>
+          </ul>
+        </li>
+        <li> <a href="#"> <i class="fa fa-home"></i> <span class="nav-label">推荐管理</span> <span class="fa arrow"></span> </a>
+          <ul class="nav nav-second-level">
+            <li> <a class="J_menuItem" href="{:U('tuijian/index')}">推荐列表</a> </li>
+            <li> <a class="J_menuItem" href="{:U('tuijian/pay')}">购买列表</a> </li>
           </ul>
         </li>
         <li> <a href="#"> <i class="fa fa-home"></i> <span class="nav-label">竞彩列表</span> <span class="fa arrow"></span> </a>
