--- a/Application/Admin/View/Tuijian/index.html
+++ b/Application/Admin/View/Tuijian/index.html
@@ -56,7 +56,7 @@
                                         <td>{$item.match.league_name}</td>
                                         <td>{$item.match.home_name}-{$item.match.away_name}</td>
                                         <td>{$item.match.time}</td>
-                                        <td>{$item.match.home_score}-{$item.match.away_score}</td>
+                                        <td>{$item.match.home_score} / {$item.match.away_score}</td>
                                         <td>{$item.user.nickname}</td>
                                         <td><if condition="$item.user.is_expert eq 1">专家<else/>普通用户</if></td>
                                         <td>{$item.type}</td>
