--- a/Application/Admin/View/Match/index.html
+++ b/Application/Admin/View/Match/index.html
@@ -52,7 +52,7 @@
                                     <tr class="gradeX">
                                         <td>{$item.match_id}</td>
                                         <td>{$item.league_name}</td>
-                                        <td>{$item.home_name}-{$item.away_name}</td>
+                                        <td>{$item.home_name} / {$item.away_name}</td>
                                         <td>{$item.time}</td>
                                         <td>{$item.home_score}-{$item.away_score}</td>
                                         <td>{$item.home_red_score}-{$item.away_red_score}</td>
