--- a/Application/Admin/View/Tuijian/pay.html
+++ b/Application/Admin/View/Tuijian/pay.html
@@ -51,7 +51,7 @@
                                     <tr class="gradeX">
                                         <td>{$item.match_id}</td>
                                         <td>{$item.match.league_name}</td>
-                                        <td>{$item.match.home_name}-{$item.match.away_name}</td>
+                                        <td>{$item.match.home_name} / {$item.match.away_name}</td>
                                         <td>{$item.match.time}</td>
                                         <td>{$item.match.home_score}-{$item.match.away_score}</td>
                                         <td>{$item.user.nickname}</td>
