--- a/Application/Admin/View/Match/follow.html
+++ b/Application/Admin/View/Match/follow.html
@@ -53,7 +53,7 @@
                                         <td>{$item.match.league_name}</td>
                                         <td>{$item.match.home_name} / {$item.match.away_name}</td>
                                         <td>{$item.match.time}</td>
-                                        <td>{$item.match.home_score}-{$item.match.away_score}</td>
+                                        <td>{$item.match.home_score} / {$item.match.away_score}</td>
                                         <td>{$item.user.nickname}</td>
                                         <td>{$item.create_time|date='Y-m-d H:i:s',###}</td>
                                         <td class="center">
