--- a/Application/Admin/View/Tuijian/pay.html
+++ b/Application/Admin/View/Tuijian/pay.html
@@ -58,7 +58,7 @@
                                         <td>{$item.match.time}</td>
                                         <td>{$item.match.home_score} / {$item.match.away_score}</td>
                                         <td>{$item.tuijian_user.nickname}</td>
-                                        <td>{$item.tuijian.is_fee}</td>
+                                        <td><if condition="$item.tuijian.is_fee eq 1"><font color="red">收费</font> <else/>免费</if></td>
                                         <td>{$item.tuijian.fee}</td>
                                         <td>{$item.user.nickname}</td>
                                         <td>{$item.create_time|date='Y-m-d H:i:s',###}</td>
