--- a/Application/Home/View/Response/index.html
+++ b/Application/Home/View/Response/index.html
@@ -1,5 +1,5 @@
 <include file="layer:header" xmlns="http://www.w3.org/1999/html"/>
-<script type="text/javascript" src="__PUBLIC__/js/utils.js"></script>
+<script type="text/javascript" src="/Public/js/utils.js"></script>
 <script type="text/javascript">
     onload = function() {
         if (!document.all)
