--- a/Application/Home/View/layer/header.html
+++ b/Application/Home/View/layer/header.html
@@ -8,9 +8,9 @@
     <meta name="Keywords" content="" />
     <meta name="Description" content="" />
     <link rel="shortcut icon" href="/favicon.ico" />
-    <link href="__PUBLIC__/css/base.css?t={$time}" rel="stylesheet" />
-    <script type="text/javascript" src="__PUBLIC__/js/jquery.js?t={$time}"></script>
-    <script type="text/javascript" src="__PUBLIC__/js/layer.js?t={$time}"></script>
+    <link href="/Public/css/base.css?t={$time}" rel="stylesheet" />
+    <script type="text/javascript" src="/Public/js/jquery.js?t={$time}"></script>
+    <script type="text/javascript" src="/Public/js/layer.js?t={$time}"></script>
 </head>
 
 <body>
