--- a/Application/Home/View/Response/register.html
+++ b/Application/Home/View/Response/register.html
@@ -18,7 +18,7 @@
         <div class="btn send_post" >注册协议</div>
                 </div></div></ul>
       <ul>
-          <div class="row" >一、总则
+        <pre>一、总则
           1.1 保宝网的所有权和运营权归深圳市永兴元科技有限公司所有。
           1.2 用户在注册之前，应当仔细阅读本协议，并同意遵守本协议后方可成为注册用户。一旦注册成功，则用户与保宝网之间自动形成协议关系，用户应当受本协议的约束。用户在使用特殊的服务或产品时，应当同意接受相关协议后方能使用。
           1.3 本协议则可由保宝网随时更新，用户应当及时关注并同意本站不承担通知义务。本站的通知、公告、声明或其它类似内容是本协议的一部分。
@@ -75,7 +75,7 @@
           八、附则
           8.1 本协议的订立、执行和解释及争议的解决均应适用中华人民共和国法律。
           8.2 如本协议中的任何条款无论因何种原因完全或部分无效或不具有执行力，本协议的其余条款仍应有效并且有约束力。
-          8.3 本协议解释权及修订权归深圳永兴元科技有限公司所有。 </div></ul>
+          8.3 本协议解释权及修订权归深圳永兴元科技有限公司所有。</pre></ul>
 	</div>
 
 </div>
