--- a/Application/Home/View/Response/register.html
+++ b/Application/Home/View/Response/register.html
@@ -9,13 +9,20 @@
     }
 
 </script>
-
+<style type="text/css">
+    xmp, pre, plaintext {
+        display: block;
+        font-family: -moz-fixed;
+        white-space: pre;
+        margin: 1em 0;
+    }
+</style>
 <div class="container">
 	<div class="from">
         <ul class="cl mt10">
         <div class="tit ">
             <div class=" mc">
-        <div class="btn send_post" >注册协议</div>
+        <div class="btn send_post" style="height: 36px; line-height: 36px;">注册协议</div>
                 </div></div></ul>
       <ul>
         <pre>
