--- a/Application/Home/View/Response/register.html
+++ b/Application/Home/View/Response/register.html
@@ -10,7 +10,7 @@
 
 </script>
 <style type="text/css">
-    xmp, pre, plaintext {
+     pre {
         display: block;
         font-family: -moz-fixed;
         white-space: pre;
