--- a/Application/Home/View/Response/register.html
+++ b/Application/Home/View/Response/register.html
@@ -10,11 +10,12 @@
 
 </script>
 <style type="text/css">
-     pre {
-        display: block;
-        font-family: -moz-fixed;
-        white-space: pre;
-        margin: 1em 0;
+    pre{
+        white-space: pre-wrap;
+        white-space: -moz-pre-wrap;
+        white-space: -pre-wrap;
+        white-space: -o-pre-wrap;
+        word-wrap: break-word;
     }
 </style>
 <div class="container">
