--- a/Application/Home/View/Response/register.html
+++ b/Application/Home/View/Response/register.html
@@ -28,7 +28,7 @@
       <ul>
         <pre>
   一、总则
-  1.1 章鱼帝足球网的所有权和运营权归深圳市永兴元科技有限公司所有。
+  1.1 章鱼帝足球网的所有权和运营权归杭州闲鹤科技有限公司所有。
   1.2 用户在注册之前，应当仔细阅读本协议，并同意遵守本协议后方可成为注册用户。一旦注册成功，则用户与章鱼帝足球网之间自动形成协议关系，用户应当受本协议的约束。用户在使用特殊的服务或产品时，应当同意接受相关协议后方能使用。
   1.3 本协议则可由章鱼帝足球网随时更新，用户应当及时关注并同意本站不承担通知义务。本站的通知、公告、声明或其它类似内容是本协议的一部分。
 
