--- a/Application/Admin/View/Index/index.html
+++ b/Application/Admin/View/Index/index.html
@@ -68,6 +68,13 @@
             <li> <a class="J_menuItem" href="{:U('sporttery/jiaoqiu')}">角球</a> </li>
           </ul>
         </li>
+        <li> <a href="#"> <i class="fa fa-home"></i> <span class="nav-label">财务管理</span> <span class="fa arrow"></span> </a>
+          <ul class="nav nav-second-level">
+            <li> <a class="J_menuItem" href="{:U('defray/sell')}">销售列表</a> </li>
+            <li> <a class="J_menuItem" href="{:U('defray/top')}">充值列表</a> </li>
+            <li> <a class="J_menuItem" href="{:U('defray/apple')}">Apple产品</a> </li>
+          </ul>
+        </li>
         <li> <a href="#"> <i class="fa fa-home"></i> <span class="nav-label">基础信息</span> <span class="fa arrow"></span> </a>
           <ul class="nav nav-second-level">
             <li> <a class="J_menuItem" href="{:U('basic/league')}">联赛列表</a> </li>
