--- a/Application/Admin/View/Index/index.html
+++ b/Application/Admin/View/Index/index.html
@@ -72,6 +72,7 @@
           <ul class="nav nav-second-level">
             <li> <a class="J_menuItem" href="{:U('defray/sell')}">销售列表</a> </li>
             <li> <a class="J_menuItem" href="{:U('defray/top')}">充值列表</a> </li>
+            <li> <a class="J_menuItem" href="{:U('defray/withdraw')}">提现列表</a> </li>
             <li> <a class="J_menuItem" href="{:U('defray/apple')}">Apple产品</a> </li>
           </ul>
         </li>
