--- a/Application/Admin/View/Defray/apple.html
+++ b/Application/Admin/View/Defray/apple.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>用户管理-章鱼帝后台系统</title>
-    <meta name="keywords" content="用户管理">
-    <meta name="description" content="用户管理">
+    <title>苹果产品管理-章鱼帝后台系统</title>
+    <meta name="keywords" content="苹果产品管理">
+    <meta name="description" content="苹果产品管理">
     <link rel="shortcut icon" href="favicon.ico">
     <link href="__PUBLIC__/admin/css/bootstrap.min.css?v=3.3.5" rel="stylesheet">
     <link href="__PUBLIC__/admin/css/font-awesome.css?v=4.4.0" rel="stylesheet">
@@ -21,7 +21,7 @@
         <div class="col-sm-12">
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
-                    <h5>用户列表</h5>
+                    <h5>苹果产品</h5>
                     <!--
                     <div class="ibox-tools"> <a class="collapse-link"> <i class="fa fa-chevron-up"></i> </a> <a class="dropdown-toggle" data-toggle="dropdown" href="table_data_tables.html#"> <i class="fa fa-wrench"></i> </a>
                       <ul class="dropdown-menu dropdown-user">
@@ -36,20 +36,12 @@
                             <table class="table table-striped table-bordered table-hover" id="editable">
                                 <thead>
                                 <tr>
-                                    <th>用户ID</th>
-                                    <th>用户手机</th>
-                                    <th>用户昵称</th>
-                                    <th>是否专家</th>
-                                    <th>发布预测数</th>
-                                    <th>购买预测数</th>
-                                    <th>销售预测数</th>
-                                    <th>被关注数</th>
-                                    <th>关注数</th>
-                                    <th>账户余额</th>
-                                    <th>总收益</th>
-                                    <th>总体现</th>
-                                    <th>创建时间</th>
-                                    <th>上次访问时间</th>
+                                    <th>产品编号</th>
+                                    <th>产品名</th>
+                                    <th>苹果编号</th>
+                                    <th>球币数量</th>
+                                    <th>对应人民币</th>
+                                    <th>状态</th>
                                     <th>操作</th>
                                 </tr>
                                 </thead>
@@ -57,21 +49,13 @@
                                 <volist name="list" id="item">
                                     <tr class="gradeX">
                                         <td>{$item.id}</td>
-                                        <td>{$item.mobile}</td>
-                                        <td>{$item.nickname}</td>
-                                        <td><if condition="$item.is_expert eq 1"><font color="red">专家</font> <else/>普通</if></td>
-                                        <td>{$item.total_send_info}</td>
-                                        <td>{$item.total_buy_info}</td>
-                                        <td>{$item.total_seller_info}</td>
-                                        <td>{$item.total_follow_user}</td>
-                                        <td>{$item.total_collect_user}</td>
+                                        <td>{$item.name}</td>
+                                        <td>{$item.apple_id}</td>
                                         <td>{$item.credit}</td>
-                                        <td>{$item.credit}</td>
-                                        <td>{$item.credit}</td>
-                                        <td>{$item.create_time|date='Y-m-d H:i:s',###}</td>
-                                        <td>{$item.update_time|date='Y-m-d H:i:s',###}</td>
+                                        <td>{$item.amount}</td>
+                                        <td><if condition="$item.status eq 1">启用<else/>停用</if></td>
                                         <td class="center">
-                                            <a href="{:U('/users/userview', ['id' => $item['id']])}"><i class="fa fa-check text-navy"></i>详细</a>
+                                            <a href="{:U('/defray/edit_apple', ['id' => $item['id']])}"><i class="fa fa-check text-navy"></i>详细</a>
                                         </td>
                                     </tr>
                                 </volist>
