--- a/Application/Admin/View/Defray/top.html
+++ b/Application/Admin/View/Defray/top.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>用户管理-章鱼帝后台系统</title>
-    <meta name="keywords" content="用户管理">
-    <meta name="description" content="用户管理">
+    <title>充值管理-章鱼帝后台系统</title>
+    <meta name="keywords" content="充值管理">
+    <meta name="description" content="充值管理">
     <link rel="shortcut icon" href="favicon.ico">
     <link href="__PUBLIC__/admin/css/bootstrap.min.css?v=3.3.5" rel="stylesheet">
     <link href="__PUBLIC__/admin/css/font-awesome.css?v=4.4.0" rel="stylesheet">
@@ -21,7 +21,7 @@
         <div class="col-sm-12">
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
-                    <h5>用户列表</h5>
+                    <h5>充值管理</h5>
                     <!--
                     <div class="ibox-tools"> <a class="collapse-link"> <i class="fa fa-chevron-up"></i> </a> <a class="dropdown-toggle" data-toggle="dropdown" href="table_data_tables.html#"> <i class="fa fa-wrench"></i> </a>
                       <ul class="dropdown-menu dropdown-user">
@@ -36,20 +36,15 @@
                             <table class="table table-striped table-bordered table-hover" id="editable">
                                 <thead>
                                 <tr>
-                                    <th>用户ID</th>
-                                    <th>用户手机</th>
-                                    <th>用户昵称</th>
-                                    <th>是否专家</th>
-                                    <th>发布预测数</th>
-                                    <th>购买预测数</th>
-                                    <th>销售预测数</th>
-                                    <th>被关注数</th>
-                                    <th>关注数</th>
-                                    <th>账户余额</th>
-                                    <th>总收益</th>
-                                    <th>总体现</th>
-                                    <th>创建时间</th>
-                                    <th>上次访问时间</th>
+                                    <th>充值ID</th>
+                                    <th>充值用户</th>
+                                    <th>充值球币</th>
+                                    <th>花费金额</th>
+                                    <th>充值渠道</th>
+                                    <th>订单编号</th>
+                                    <th>流水编号</th>
+                                    <th>充值时间</th>
+                                    <th>充值状态</th>
                                     <th>操作</th>
                                 </tr>
                                 </thead>
@@ -65,11 +60,6 @@
                                         <td>{$item.total_seller_info}</td>
                                         <td>{$item.total_follow_user}</td>
                                         <td>{$item.total_collect_user}</td>
-                                        <td>{$item.credit}</td>
-                                        <td>{$item.credit}</td>
-                                        <td>{$item.credit}</td>
-                                        <td>{$item.create_time|date='Y-m-d H:i:s',###}</td>
-                                        <td>{$item.update_time|date='Y-m-d H:i:s',###}</td>
                                         <td class="center">
                                             <a href="{:U('/users/userview', ['id' => $item['id']])}"><i class="fa fa-check text-navy"></i>详细</a>
                                         </td>
