--- a/Application/Home/View/Response/about.html
+++ b/Application/Home/View/Response/about.html
@@ -21,10 +21,13 @@
 <div class="container">
     <div class="from">
         <ul class="cl mt10">
+            <!--
             <div class="tit ">
                 <div class=" mc">
                     <div class="btn send_post" style="height: 36px; line-height: 36px;">关于我们</div>
-                </div></div></ul>
+                </div>
+            </div>-->
+        </ul>
         <ul>
         <pre>
  杭州闲鹤科技有限公司，主要经营技术开发、技术服务、技术咨询、
