--- a/Application/Home/View/Response/register.html
+++ b/Application/Home/View/Response/register.html
@@ -21,10 +21,12 @@
 <div class="container">
 	<div class="from">
         <ul class="cl mt10">
+            <!--
         <div class="tit ">
             <div class=" mc">
         <div class="btn send_post" style="height: 36px; line-height: 36px;">注册协议</div>
-                </div></div></ul>
+                </div></div>-->
+        </ul>
       <ul>
         <pre>
   一、总则
