--- a/Application/Admin/View/Sporttery/beidan.html
+++ b/Application/Admin/View/Sporttery/beidan.html
@@ -91,7 +91,7 @@
 <!-- Page-Level Scripts -->
 <script>
     // 状态修改
-    $('select[name="match_id"]').change(function(){
+    $('input[name="match_id"]').change(function(){
         var id = $(this).attr('data-id');
         var status = $(this).val();
         var index = parent.layer.load(1, {shade: [0.1,'#000']});
