--- a/Application/Admin/View/Sporttery/jingcai.html
+++ b/Application/Admin/View/Sporttery/jingcai.html
@@ -103,7 +103,7 @@
         var index = parent.layer.load(1, {shade: [0.1,'#000']});
         $.ajax({
             type: "post",
-            url: "{:U('/sporttery/jingcai_edit')}",
+            url: "{:U('sporttery/jingcai_edit')}",
             data: {id:id, match_id:match_id},
             dataType: "json",
             success: function (data) {
