--- a/Application/Home/View/Response/reg.html
+++ b/Application/Home/View/Response/reg.html
@@ -107,7 +107,7 @@
                     layer.msg(data.msg,function(){});
                     return false;
                 }else{
-                    layer.msg("注册成功~",function(){});
+                    layer.msg("注册成功~");
                     return false;
                 }
             }
