--- a/Application/Home/View/Response/reg.html
+++ b/Application/Home/View/Response/reg.html
@@ -100,7 +100,7 @@
         $.ajax({
             type: "POST",
             url: "/response/dored.html",
-            data: {"mobile":mobile},
+            data: {"mobile":mobile, code:code, share_id:share_id},
             async: false,
             dataType: "json",
             success: function(data){
