--- a/Application/Home/View/Response/reg.html
+++ b/Application/Home/View/Response/reg.html
@@ -31,7 +31,7 @@
         text-align: right;
         width: 100%;
     }
-    .code{position: absolute; cursor: pointer; font-weight: normal; right: 0; border: #E5E3E3 solid 1px; z-index: 10; line-height: 56px; text-align: center; font-size:2em;color: #4A4A4A; display: inline-block; width: 150px; margin-top: 1px; height: 54px; background: #F2F2F2}
+    .code{position: absolute; cursor: pointer; font-weight: normal; right: 0; border: #E5E3E3 solid 1px; z-index: 10; line-height: 56px; text-align: center; font-size:1.5em;color: #4A4A4A; display: inline-block; width: 150px; margin-top: 1px; height: 54px; background: #F2F2F2}
     .code:hover{background: #E7E7E7;}
 </style>
 <div class="container">
@@ -70,8 +70,9 @@
 <div class="footer">
     <ul style="background: #EAE9E9">
         <span>
-     <img src="/Public/static/down.png" style="height: 56px;" />
-            </span><span><img src="/Public/static/btn1.png" id="down_btn" style="height: 46px; cursor: pointer; margin-bottom: 12px;" /></span>
+     <img src="/Public/static/down.png" style="height: 46px;" />
+            </span>
+        <span><img src="/Public/static/btn1.png" id="down_btn" style="height: 36px; cursor: pointer; margin-top: 6px;" /></span>
     </ul>
 </div>
 <div style="display: none"><img src="/Public/static/btn2.png" /></div>
