--- a/Application/Home/View/Response/reg.html
+++ b/Application/Home/View/Response/reg.html
@@ -67,7 +67,7 @@
 
 </div>
 </div>
-<div class="footer">
+<div class="footer" style="background: #EAE9E9">
     <ul style="background: #EAE9E9">
         <span>
      <img src="/Public/static/down.png" style="height: 46px;" />
