--- a/Application/Home/View/Response/reg.html
+++ b/Application/Home/View/Response/reg.html
@@ -70,7 +70,7 @@
 <div class="footer" style="background: #EAE9E9">
     <ul style="background: #EAE9E9">
         <span>
-     <img src="/Public/static/down.png" style="height: 46px;" />
+     <img src="/Public/static/down.png" style="height: 46px;  margin-top: 2px;" />
             </span>
         <span><img src="/Public/static/btn1.png" id="down_btn" style="height: 36px; cursor: pointer; margin-top: 2px;" /></span>
     </ul>
